--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{
   width: 80%;
   margin: 0 auto;
-  max-width: 500px;
+  max-width: 800px;
+  background:#fff3e6
 }
 h1{text-align: center;}
 h2{text-align: center;}
